# fsst-plus-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  basic_fsst.cpp  main.cpp  main.h  run.sh
benchmarking/: visualize_data.ipynb
benchmarking/etl/extract/: cycljoinbench_nextjd_pbibench_download.py  nextiajd_download.py  realnest_download.py
benchmarking/etl/transform&load/: duckdb_compression_choice.db  read_nextia_datasets.py  refine_datasets.py
benchmarking/results/: AI_optimized.parquet  benchmark.db  benchmark.db.wal  results.parquet  results_base(w_duckdb).parquet  results_base_generoustobasicfsst.parquet  results_fsst_plus_onest.parquet  results_last.parquet  resultsv2bitpacked_fsstplus_onest.parquet  resultsv2bitpacked_fsstplus_onest_compressbefore.parquet  resultsv2bitpacked_fsstplus_twost.parquet  visualize_results.ipynb  visualize_results_duckdb(sorting_not_nice).ipynb
benchmarking/results/parquet/: results_fsst_plus_twost.parquet  resultsv2bitpacked_base.parquet  resultsv2bitpacked_fsstplus_onest.parquet
benchmarking/results/plots/: all_results.html  fsst_plus_better.html  fsst_plus_worse.html
benchmarking/results/plots/(limited_datasets)plots_one_st_compress_before_longer_prefix/: all_results.html  fsst_plus_better.html  fsst_plus_worse.html
benchmarking/results/plots/compare_all_together/: all_results.html  compression_difference_difference.html
benchmarking/results/plots/plots_correct_SQL_dict_filtering/: fsst_plus_better.html  fsst_plus_worse.html
benchmarking/results/plots/plots_one_st/: all_results.html  fsst_plus_better.html  fsst_plus_worse.html
benchmarking/results/plots/plots_one_st_compress_before_longer_prefix/: all_results.html  fsst_plus_better.html  fsst_plus_worse.html
benchmarking/results/plots/v2.1aioptimized_longerprefix/: all_results.html  compression_difference_difference.html
benchmarking/results/plots_duckdb/: all_results.html  fsst_plus_better.html  fsst_plus_worse.html
benchmarking/results/ready/: results_fsst_plus_onest_compressbefore.parquet  resultsv2.1bitpackedaioptimized_fsstplus_longerprefix_onest_compressbefore.parquet  resultsv2.2nocompromises_fsstplus_longerprefix_onest_compressbefore.parquet  resultsv2bitpacked_fsstplus_onest.parquet  resultsv2bitpacked_fsstplus_onest_compressbefore.parquet
cleaving/: cleaving.cpp  cleaving.h
docs/: cleaving_problem_description.txt  longer_prefix_prompt.txt  proposal.txt
example_data/: otp.csv
src/: basic_fsst.cpp  basic_fsst.h  compress_w_basic_fsst.cpp  config.h  duckdb_loading_data_example.cpp  env.h  fsst_plus.cpp  fsst_plus.h  global.h  main.cpp  main.h
src/block/: block_decompressor.h  block_sizer.h  block_types.h  block_writer.h
src/cleaving/: cleaving.cpp  cleaving.h  cleaving_types.h
src/util/: basic_fsst.h  duckdb_utils.h  generic_utils.h  print_utils.h
test/: binary_search_test.cpp  cleaving_test.cpp  fsst_plus_test.cpp  sizing_test.cpp
tests/: cleaving.cpp
(+4 files in other folders)
